--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,9 @@
 python-telegram-bot==21.7
-Flask
-gunicorn
-python-dotenv
+Flask==3.1.2
+gunicorn==23.0.0
+python-dotenv==1.0.1
 pyswisseph==2.10.3.2
-pillow==9.5.0
-openai==1.0.0
-Flask==2.3.2
-SQLAlchemy==1.4.50
-requests==2.31.0
-python-dotenv==1.0.0
-gunicorn==20.1.0
-apscheduler==3.9.1
+pytz==2024.1
+requests==2.32.3
+openai==1.35.10
+Pillow==10.3.0
